--- a/docs/MNT4753.markdown
+++ b/docs/MNT4753.markdown
@@ -1,6 +1,6 @@
 <div class="module">
 <h1>
-MNT4753
+MNT4-753 Elliptic Curve
 </h1>
 <div class="entries">
 <p>This page describes the constants, fields, and groups associated with the MNT4-753 curve.</p>
